test/corpus/hook_blocks.txt
================================================================================
BeforeRun standalone statement
================================================================================

BeforeRun my_setup

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (word)))

================================================================================
AfterRun standalone statement
================================================================================

AfterRun my_cleanup

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (word)))

================================================================================
BeforeCall standalone statement
================================================================================

BeforeCall pre_call

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (word)))

================================================================================
AfterCall standalone statement
================================================================================

AfterCall post_call

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (word)))

================================================================================
BeforeEach standalone statement
================================================================================

BeforeEach setup_func

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (word)))

================================================================================
AfterEach standalone statement
================================================================================

AfterEach cleanup_func

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (word)))

================================================================================
BeforeAll standalone statement
================================================================================

BeforeAll setup_all

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (word)))

================================================================================
AfterAll standalone statement
================================================================================

AfterAll cleanup_all

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (word)))

================================================================================
Hook statement with multiple functions
================================================================================

BeforeEach 'setup1' 'setup2'

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (raw_string)
    argument: (raw_string)))

================================================================================
Hook statement with inline code
================================================================================

Before 'value=10'

--------------------------------------------------------------------------------

(program
  (shellspec_hook_statement
    argument: (raw_string)))

================================================================================
Hook statement followed by It
================================================================================

Describe 'group'
  BeforeEach 'setup'
  It 'runs'
    When call true
  End
End

--------------------------------------------------------------------------------

(program
  (shellspec_describe_block
    description: (raw_string)
    (shellspec_hook_statement
      argument: (raw_string))
    (shellspec_it_block
      description: (raw_string)
      (shellspec_when_statement
        function: (word)))))

================================================================================
Hook statement as last statement in block
================================================================================

Describe 'group'
  It 'runs'
    When call true
  End
  AfterEach 'cleanup'
End

--------------------------------------------------------------------------------

(program
  (shellspec_describe_block
    description: (raw_string)
    (shellspec_it_block
      description: (raw_string)
      (shellspec_when_statement
        function: (word)))
    (shellspec_hook_statement
      argument: (raw_string))))
