test/corpus/parameters_variants.txt
================================================================================
Parameters:block variant
================================================================================

Parameters:block
  "arg1" "arg2"
  "arg3" "arg4"
End

--------------------------------------------------------------------------------

(program
  (shellspec_utility_block
    (command
      name: (command_name
        (string
          (string_content)))
      argument: (string
        (string_content)))
    (command
      name: (command_name
        (string
          (string_content)))
      argument: (string
        (string_content)))))

================================================================================
Parameters:value variant
================================================================================

Parameters:value val1 val2

--------------------------------------------------------------------------------

(program
  (shellspec_parameters_value_statement
    value: (word)
    value: (word)))

================================================================================
Parameters:matrix variant
================================================================================

Parameters:matrix
  "a" "b"
  "c" "d"
End

--------------------------------------------------------------------------------

(program
  (shellspec_utility_block
    (command
      name: (command_name
        (string
          (string_content)))
      argument: (string
        (string_content)))
    (command
      name: (command_name
        (string
          (string_content)))
      argument: (string
        (string_content)))))

================================================================================
Parameters:dynamic variant
================================================================================

Parameters:dynamic
  generate_params
End

--------------------------------------------------------------------------------

(program
  (shellspec_utility_block
    (command
      name: (command_name
        (word)))))

================================================================================
Parameters:block with multiple rows
================================================================================

Parameters:block
  "case1" "expected1"
  "case2" "expected2"
End

--------------------------------------------------------------------------------

(program
  (shellspec_utility_block
    (command
      name: (command_name
        (string
          (string_content)))
      argument: (string
        (string_content)))
    (command
      name: (command_name
        (string
          (string_content)))
      argument: (string
        (string_content)))))

================================================================================
Parameters:value inside Describe
================================================================================

Describe 'addition'
  Parameters:value 1 2 3
  It "uses $1"
    When call echo "$1"
  End
End

--------------------------------------------------------------------------------

(program
  (shellspec_describe_block
    description: (raw_string)
    (shellspec_parameters_value_statement
      value: (number)
      value: (number)
      value: (number))
    (shellspec_it_block
      description: (string
        (string_content)
        (simple_expansion
          (variable_name)))
      (shellspec_when_statement
        function: (word)
        argument: (string
          (simple_expansion
            (variable_name)))))))
