test/corpus/percent_directives.txt
================================================================================
%text directive with data line
================================================================================

%text
#|line one

--------------------------------------------------------------------------------

(program
  (shellspec_text_directive
    data_line: (shellspec_data_line_content)))

================================================================================
%text:raw directive
================================================================================

%text:raw
#|raw content $var

--------------------------------------------------------------------------------

(program
  (shellspec_text_directive
    data_line: (shellspec_data_line_content)))

================================================================================
%text:expand directive
================================================================================

%text:expand
#|expanded $var

--------------------------------------------------------------------------------

(program
  (shellspec_text_directive
    data_line: (shellspec_data_line_content)))

================================================================================
%text with pipe filter
================================================================================

%text | tr 'a-z' 'A-Z'
#|hello

--------------------------------------------------------------------------------

(program
  (shellspec_text_directive
    filter: (word)
    filter: (raw_string)
    filter: (raw_string)
    data_line: (shellspec_data_line_content)))

================================================================================
%const directive
================================================================================

%const NAME: value

--------------------------------------------------------------------------------

(program
  (shellspec_const_directive
    name: (word)
    value: (word)))

================================================================================
%const directive with string value
================================================================================

%const NAME: "hello world"

--------------------------------------------------------------------------------

(program
  (shellspec_const_directive
    name: (word)
    value: (string
      (string_content))))

================================================================================
% shorthand directive
================================================================================

% VERSION: "1.0"

--------------------------------------------------------------------------------

(program
  (shellspec_const_directive
    name: (word)
    value: (string
      (string_content))))

================================================================================
%puts directive
================================================================================

%puts value

--------------------------------------------------------------------------------

(program
  (shellspec_output_directive
    argument: (word)))

================================================================================
%putsn directive
================================================================================

%putsn value

--------------------------------------------------------------------------------

(program
  (shellspec_output_directive
    argument: (word)))

================================================================================
%- directive
================================================================================

%- value

--------------------------------------------------------------------------------

(program
  (shellspec_output_directive
    argument: (word)))

================================================================================
%= directive
================================================================================

%= value

--------------------------------------------------------------------------------

(program
  (shellspec_output_directive
    argument: (word)))

================================================================================
%puts with string argument
================================================================================

%puts "hello world"

--------------------------------------------------------------------------------

(program
  (shellspec_output_directive
    argument: (string
      (string_content))))

================================================================================
%preserve directive
================================================================================

%preserve VAR1 VAR2

--------------------------------------------------------------------------------

(program
  (shellspec_preserve_directive
    variable: (word)
    variable: (word)))

================================================================================
%preserve single variable
================================================================================

%preserve RESULT

--------------------------------------------------------------------------------

(program
  (shellspec_preserve_directive
    variable: (word)))

================================================================================
%logger directive
================================================================================

%logger "debug message"

--------------------------------------------------------------------------------

(program
  (shellspec_logger_directive
    argument: (string
      (string_content))))

================================================================================
%logger with word argument
================================================================================

%logger debug_info

--------------------------------------------------------------------------------

(program
  (shellspec_logger_directive
    argument: (word)))
